# burel

./: .gitignore  CHANGES.md  LICENSE  MODIFICHE.md  README.md  make_bundles.sh  pyproject.toml  requirements.txt
burel/: __init__.py  paths.py
burel/data/: __init__.py  codec.py  shakespeare.py  tinystories.py
burel/inference/: __init__.py  sampler.py
burel/model/: __init__.py  hope.py  layers.py  memory.py
burel/training/: __init__.py  trainer.py
configs/: config.yaml
experiments/: README.md
experiments/01_ttt_ablation/: Burel_Ablation_Colab.ipynb  README.md
experiments/02_vanilla_ab/: Burel_Vanilla_AB_Colab.ipynb  README.md
model/: README.md
modello/: README.md
notebooks/: Burel_Colab.ipynb
scripts/: ablation_ttt.py  compare_three.py  generate.py  prepare_data.py  train.py
study_vanilla/: README.md  __init__.py  config.yaml  data.py  eval_loss_by_chunk.py  model.py  train.py
tests/: test_causal.py  test_tokenizer_roundtrip.py
